time to setup dns etc.

--- a/src/styles.pcss
+++ b/src/styles.pcss
@@ -10,5 +10,13 @@
 }
 
 .gr-border {
-	@apply border rounded;
+	@apply border rounded overflow-hidden;
+}
+
+.sm-divider {
+	@apply h-8 border-l w-1;
+}
+
+.lg-divider {
+	@apply h-64 border-l w-1;
 }
